--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.51.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.10.0",
     "recharts": "^2.5.0"
   },
